* Snooze button per issue #6 * Fixed button sizes: they were too small and inconsistent between a and button tags

--- a/getupandmove.css
+++ b/getupandmove.css
@@ -1,3 +1,7 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+  outline: none;
+}
 body {
   background: #2980B9;
   color: #ECF0F1;
@@ -9,11 +13,29 @@ body.on-break {
   background: #2C3E50;
 }
 .btn {
-  display: inline-block;
-  padding: 4px 16px;
+  border: none;
+  font-size: 15px;
+  font-weight: normal;
+  line-height: 1.4;
+  border-radius: 4px;
+  padding: 10px 15px;
+  -webkit-font-smoothing: subpixel-antialiased;
+  -webkit-transition: 0.25s linear;
+  transition: 0.25s linear;
   text-decoration: none;
-  font-size: 80%;
-  border-radius: 8px;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: pointer;
+  display: inline-block;
+}
+button {
+  -webkit-appearance: button;
+  margin: 0;
+}
+.btn[disabled] {
+  color: rgba(255, 255, 255, 0.75);
+  opacity: 0.7;
 }
 .btn-primary {
   background-color: #3498DB;
